Fix scrollbar in filetree sidenav
Summary: Fixes T11457, I guess. It feels wierd when you drag it a bit, and Im not positive if it's the calc css or javascript.

Test Plan: Enable filetree, shorten browser, see scrolling appear if files too long.

Reviewers: avivey, epriestley

Reviewed By: epriestley

Subscribers: Korvin

Maniphest Tasks: T11457

Differential Revision: https://secure.phabricator.com/D16393

--- a/webroot/rsrc/css/aphront/phabricator-nav-view.css
+++ b/webroot/rsrc/css/aphront/phabricator-nav-view.css
@@ -68,6 +68,12 @@
   margin-left: 212px;
 }
 
+.has-drag-nav ul.phui-list-view {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .device-desktop .phui-navigation-shell .has-drag-nav .phabricator-nav-local {
   width: 205px;
   padding: 0;
